Change java version to 21, and correcting Dto sending keys, and refactor openapi yml
