# src/main/java/com/dynata/surveyhw/controllers/SurveyController.java
@@ -2,12 +2,16 @@ package com.dynata.surveyhw.controllers;
 
 import com.dynata.surveyhw.dtos.SurveyDto;
 import com.dynata.surveyhw.dtos.SurveyStatisticDto;
+import com.dynata.surveyhw.dtos.csv.SurveyCsvDto;
+import com.dynata.surveyhw.dtos.openapi.PageStatisticDto;
+import com.dynata.surveyhw.dtos.openapi.PageSurveyDto;
 import com.dynata.surveyhw.handlers.responses.ExceptionResponse;
 import com.dynata.surveyhw.services.CsvService;
 import com.dynata.surveyhw.services.SurveyService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
@@ -55,7 +59,7 @@ public class SurveyController {
     })
     @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<Flux<SurveyDto>> uploadSurveysCsv(@RequestPart("file") FilePart filePart) {
-        return ResponseEntity.status(HttpStatus.CREATED).body(csvService.readFromCsv(filePart, SurveyDto.class)
+        return ResponseEntity.status(HttpStatus.CREATED).body(csvService.readFromCsv(filePart, SurveyCsvDto.class)
                 .flatMapMany(surveyService::saveSurveyDtos));
     }
 
@@ -63,7 +67,11 @@ public class SurveyController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            array = @ArraySchema(schema = @Schema(implementation = SurveyDto.class)))),
+                            schema = @Schema(implementation = PageSurveyDto.class),
+                            examples = @ExampleObject(name = "PageSurveyDtoExample",
+                                    summary = "Paged response with SurveyDto objects",
+                                    externalValue = "/openapi/examples/page-survey-example.json"
+                            ))),
             @ApiResponse(responseCode = "400", description = "Runtime error: HttpStatus.BAD_REQUEST",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
                             schema = @Schema(implementation = ExceptionResponse.class))),
@@ -98,7 +106,11 @@ public class SurveyController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            array = @ArraySchema(schema = @Schema(implementation = SurveyStatisticDto.class)))),
+                            schema = @Schema(implementation = PageStatisticDto.class),
+                            examples = @ExampleObject(name = "PageStatisticDtoExample",
+                                    summary = "Paged response with SurveyStatisticDto objects",
+                                    externalValue = "/openapi/examples/page-statistic-example.json"
+                            ))),
             @ApiResponse(responseCode = "400", description = "Runtime error: HttpStatus.BAD_REQUEST",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
                             schema = @Schema(implementation = ExceptionResponse.class))),
